// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frames Blackboxed Frames filters blackboxed frames 1`] = `
<div
  className="pane frames"
>
  <ul>
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 1,
          "location": Object {
            "sourceId": "1",
          },
          "source": Object {
            "id": "1",
          },
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "sourceId": "1",
          },
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 3,
          "location": Object {
            "sourceId": "1",
          },
          "source": Object {
            "id": "1",
          },
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="3"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "sourceId": "1",
          },
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
  </ul>
</div>
`;

exports[`Frames Library Frames toggling framework frames 1`] = `
<div
  className="pane frames"
>
  <ul>
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 2,
          "library": "back",
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="2"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 3,
          "library": "back",
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="3"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="8"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
  </ul>
</div>
`;

exports[`Frames Library Frames toggling framework frames 2`] = `
<div
  className="pane frames"
>
  <ul>
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={true}
      hideLocation={false}
      key="1"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Group
      copyStackTrace={[Function]}
      frameworkGroupingOn={true}
      group={
        Array [
          Object {
            "id": 2,
            "library": "back",
          },
          Object {
            "id": 3,
            "library": "back",
          },
        ]
      }
      key="2"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={true}
      hideLocation={false}
      key="8"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
  </ul>
</div>
`;

exports[`Frames Supports different number of frames empty frames 1`] = `
<div
  className="pane frames"
>
  <div
    className="pane-info empty"
  >
    Not paused
  </div>
</div>
`;

exports[`Frames Supports different number of frames one frame 1`] = `
<div
  className="pane frames"
>
  <ul>
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
  </ul>
</div>
`;

exports[`Frames Supports different number of frames toggling the show more button 1`] = `
<div
  className="pane frames"
>
  <ul>
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 1,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="1"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 2,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="2"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 3,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="3"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 4,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="4"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 5,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="5"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 6,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="6"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 7,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="7"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 8,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="8"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 9,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="9"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
    <Frame
      copyStackTrace={[Function]}
      frame={
        Object {
          "id": 10,
        }
      }
      frameworkGroupingOn={false}
      hideLocation={false}
      key="10"
      selectFrame={[Function]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
      toggleBlackBox={[Function]}
      toggleFrameworkGrouping={[Function]}
    />
  </ul>
  <div
    className="show-more"
    onClick={[Function]}
  >
    Collapse rows
  </div>
</div>
`;
